[package]
name = "timing"
version = "0.1.0"
authors = ["Rob Eady <robertj.eady@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
process-memory = "0.4.0"
# for getting the process
sysinfo = "0.16.5"
winapi = { version = "0.3.9", features = ["impl-default", "impl-debug"] }
derivative = "2.2.0"
static_assertions = "1.1.0"
imgui = "0.4.0"
imgui-glium-renderer = "0.4.0"
glium = "0.27"
imgui-winit-support = "0.4.0"
ordered-float = "2.1.1"
